<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:backgroundTint="@color/white_two"
    android:paddingHorizontal="25dp">


    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:src="@drawable/logo_ioasys"
        app:layout_constraintBottom_toTopOf="@id/lblTitulo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:tint="@color/colorPrimary" />


    <TextView
        android:id="@+id/lblTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="2"
        android:text="@string/titulo"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/lblSubTitutlo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo" />


    <TextView
        android:id="@+id/lblSubTitutlo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/subtitulo"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/etUsuario"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblTitulo" />


    <EditText
        android:id="@+id/etUsuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:drawableStart="@drawable/ic_login_mail_24"
        android:drawablePadding="@dimen/drawable_padding"
        android:hint="@string/e_mail_hint"
        android:inputType="text"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@+id/etSenha"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblSubTitutlo" />

    <EditText
        android:id="@+id/etSenha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_login_senha_24"
        android:drawablePadding="@dimen/drawable_padding"
        android:hint="@string/senha_hint"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etUsuario" />

    <ImageView
        android:id="@+id/ivVisibilidadeSenha"
        android:paddingEnd="10dp"
        android:paddingTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/etUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_login_visibility_24"
        app:layout_constraintRight_toRightOf="parent"/>


    <TextView
        android:id="@+id/lblMsgErro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/msgErro"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSenha" />

    <ProgressBar
        android:id="@+id/progressLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etSenha" />

    <Button
        android:id="@+id/btnLogin"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/entrar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblMsgErro" />

</androidx.constraintlayout.widget.ConstraintLayout>